<resources>
    <string name="app_name">SRCC</string>

    <string name="welcome">Welcome</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="send">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="make_model"><![CDATA[Make & Model]]></string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="service">Service</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="hatchback">Hatchback</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="segment_types">Segment Types</string>
    <string name="segment_type">Segment Type : </string>
    <string name="service_offers">Service Offers</string>
    <string name="welcome_hint">For booking and service related queries we are requesting you to add your phone number</string>
    <string name="verify_account_text">Please enter your phone number to verify your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_number">Please enter your phone number to verify your account</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>

</resources>