<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.HomeFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/tab_active"
        app:checkedButton="@+id/btnHatchback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSegmentTypes"
        app:layout_constraintTop_toBottomOf="@+id/tvSegmentTypes"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHatchback"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hatchback"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSedan"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/sedan"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSuv"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/suv"
            android:textColor="@color/white" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSegmentTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/segment_types"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvServiceOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/service_offers"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvSegmentTypes"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardServiceOffers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toggleGroup"
        app:layout_constraintStart_toStartOf="@+id/tvServiceOffers"
        app:layout_constraintTop_toBottomOf="@+id/tvServiceOffers"
        app:layout_constraintVertical_weight="0.5"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay" />
</androidx.constraintlayout.widget.ConstraintLayout>