<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.login.PhoneVerificationFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_phone_auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_title_phone_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:layout_marginBottom="@dimen/marginSize"
        android:text="@string/verify_your_phone_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_subtitle_phone_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_phone_auth"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_subtitle_phone_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:text="@string/verify_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/marginSize"
        app:layout_constraintBottom_toTopOf="@+id/OwnerNameInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView_title_phone_auth"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView_title_phone_auth"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_phone_auth"
        app:layout_constraintWidth_percent="0.7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OwnerNameInputLayout"
        style="@style/loginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/marginSizeXL"
        android:hint="@string/phone_number"
        android:layout_marginBottom="@dimen/marginSize"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="@+id/textView_title_phone_auth"
        app:layout_constraintStart_toStartOf="@+id/textView_title_phone_auth"
        app:layout_constraintTop_toBottomOf="@+id/textView_subtitle_phone_auth"
        app:layout_constraintWidth_percent="0.7"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:ems="14"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/send"
        android:layout_marginTop="@dimen/marginSizeXL"
        android:layout_marginBottom="@dimen/marginSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/OwnerNameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/OwnerNameInputLayout"
        app:layout_constraintWidth_percent="0.3"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay" />

</androidx.constraintlayout.widget.ConstraintLayout>