<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.vehicle.AddVehicleFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginSize"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/marginSize"
        android:gravity="center"
        android:text="@string/add_vehicle"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivUser"
        android:layout_width="@dimen/thirty_db"
        android:layout_height="@dimen/thirty_db"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:contentDescription="TODO"
        android:padding="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/ic_user" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OwnerNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:hint="@string/owner_name"
        app:layout_constraintBottom_toBottomOf="@+id/ivUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="@+id/ivUser"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:ems="14"
            android:importantForAutofill="no"
            android:inputType="text"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPhone"
        android:layout_width="@dimen/thirty_db"
        android:layout_height="@dimen/thirty_db"
        android:layout_marginTop="32dp"
        android:padding="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivUser"
        app:srcCompat="@drawable/ic_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactInputField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:hint="@string/contact_number"
        app:layout_constraintBottom_toBottomOf="@+id/ivPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="@+id/ivPhone"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:ems="14"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivVehicleNumber"
        android:layout_width="@dimen/thirty_db"
        android:layout_height="@dimen/thirty_db"
        android:layout_marginTop="32dp"
        android:padding="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivPhone"
        app:srcCompat="@drawable/ic_registration_number" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vehicleNumberInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/white"
        android:hint="@string/vehicle_number"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivVehicleNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="@+id/ivVehicleNumber"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:ems="14"
            android:importantForAutofill="no"
            android:inputType="text"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMake"
        android:layout_width="@dimen/thirty_db"
        android:layout_height="@dimen/thirty_db"
        android:layout_marginTop="32dp"
        android:padding="@dimen/five_dp"
        app:layout_constraintStart_toStartOf="@+id/ivUser"
        app:layout_constraintTop_toBottomOf="@+id/ivVehicleNumber"
        app:srcCompat="@drawable/ic_make_model" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vehicleMakeInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="@color/white"
        android:hint="@string/make_model"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ivMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/ivUser"
        app:layout_constraintTop_toTopOf="@+id/ivMake"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleMake"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="8dp"
            android:ems="14"
            android:importantForAutofill="no"
            android:inputType="text"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/vehicleMakeInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/vehicleMakeInputLayout"
        app:shapeAppearanceOverlay="@style/CustomShapeOverlay" />

</androidx.constraintlayout.widget.ConstraintLayout>

